[metadata]
name = django-routes
version = attr: django_routes.__version__
url = https://github.com/realnoobs/django_routes
author = Rizki Sasri Dwitama
author_email = sasri.project@gmail.com
description = Django Routes
long_description_content_type = text/markdown
long_description = file: README.md
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries :: Application Frameworks
project_urls =
    Documentation = https://github.com/realnoobs/django_routes
    Source = https://github.com/realnoobs/django_routes

[options]
python_requires = >=3.6
packages = django_routes
include_package_data = true
zip_safe = false
install_requires =
    django>=3.2.7,<4.0
    django-hookup>=0.0.1

[options.entry_points]

[options.extras_require]
allauth = django-allauth

[bdist_rpm]

[flake8]
exclude = build,.git,.tox,./tests/.env
ignore = W504,W601,W503
max-line-length = 119

[isort]
combine_as_imports = true
default_section = THIRDPARTY
known_first_party = django_routes
include_trailing_comma = true
known_django = django
line_length = 119
multi_line_output = 5
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
